sasmParser.py
# Generated from sasm.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class sasmParser ( Parser ):

    grammarFileName = "sasm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'DATA'", "<INVALID>", "<INVALID>", 
                     "'POP'", "'PUSH'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "DATA", "JUMPS", "OPCODEZERO", 
                      "POP", "PUSH", "ADR", "NUMBER", "COMMENT", "EOL", 
                      "WS" ]

    RULE_prog = 0
    RULE_datadef = 1
    RULE_linecode = 2
    RULE_address = 3
    RULE_number = 4
    RULE_comment = 5
    RULE_opcode = 6

    ruleNames =  [ "prog", "datadef", "linecode", "address", "number", "comment", 
                   "opcode" ]

    EOF = Token.EOF
    T__0=1
    DATA=2
    JUMPS=3
    OPCODEZERO=4
    POP=5
    PUSH=6
    ADR=7
    NUMBER=8
    COMMENT=9
    EOL=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(sasmParser.EOF, 0)

        def datadef(self):
            return self.getTypedRuleContext(sasmParser.DatadefContext,0)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(sasmParser.EOL)
            else:
                return self.getToken(sasmParser.EOL, i)

        def linecode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sasmParser.LinecodeContext)
            else:
                return self.getTypedRuleContext(sasmParser.LinecodeContext,i)


        def getRuleIndex(self):
            return sasmParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = sasmParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 14
                self.datadef()
                self.state = 15
                self.match(sasmParser.EOL)


            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 19
                self.match(sasmParser.EOL)
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8 or _la==9:
                self.state = 30
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 25
                        self.linecode()
                        self.state = 26
                        self.match(sasmParser.EOL) 
                    self.state = 32
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 33
                self.linecode()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 34
                    self.match(sasmParser.EOL)
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 42
            self.match(sasmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatadefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(sasmParser.DATA, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(sasmParser.NUMBER)
            else:
                return self.getToken(sasmParser.NUMBER, i)

        def getRuleIndex(self):
            return sasmParser.RULE_datadef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatadef" ):
                listener.enterDatadef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatadef" ):
                listener.exitDatadef(self)




    def datadef(self):

        localctx = sasmParser.DatadefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_datadef)
        self._la = 0 # Token type
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(sasmParser.DATA)
                self.state = 45
                self.match(sasmParser.NUMBER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(sasmParser.DATA)
                self.state = 47
                self.match(sasmParser.NUMBER)
                self.state = 48
                self.match(sasmParser.T__0)
                self.state = 49
                self.match(sasmParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.match(sasmParser.DATA)
                self.state = 51
                self.match(sasmParser.NUMBER)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 52
                    self.match(sasmParser.T__0)
                    self.state = 53
                    self.match(sasmParser.NUMBER)
                    self.state = 58
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinecodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(sasmParser.NumberContext,0)


        def opcode(self):
            return self.getTypedRuleContext(sasmParser.OpcodeContext,0)


        def comment(self):
            return self.getTypedRuleContext(sasmParser.CommentContext,0)


        def getRuleIndex(self):
            return sasmParser.RULE_linecode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinecode" ):
                listener.enterLinecode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinecode" ):
                listener.exitLinecode(self)




    def linecode(self):

        localctx = sasmParser.LinecodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_linecode)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.number()
                self.state = 62
                self.opcode()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 63
                    self.comment()


                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddressContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADR(self):
            return self.getToken(sasmParser.ADR, 0)

        def getRuleIndex(self):
            return sasmParser.RULE_address

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddress" ):
                listener.enterAddress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddress" ):
                listener.exitAddress(self)




    def address(self):

        localctx = sasmParser.AddressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_address)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(sasmParser.ADR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(sasmParser.NUMBER, 0)

        def getRuleIndex(self):
            return sasmParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = sasmParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(sasmParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(sasmParser.COMMENT, 0)

        def getRuleIndex(self):
            return sasmParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = sasmParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(sasmParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.jump = None # Token
            self.adr = None # Token
            self.comm = None # Token
            self.pop = None # Token
            self.push = None # Token
            self.absol = None # Token

        def JUMPS(self):
            return self.getToken(sasmParser.JUMPS, 0)

        def ADR(self):
            return self.getToken(sasmParser.ADR, 0)

        def OPCODEZERO(self):
            return self.getToken(sasmParser.OPCODEZERO, 0)

        def POP(self):
            return self.getToken(sasmParser.POP, 0)

        def PUSH(self):
            return self.getToken(sasmParser.PUSH, 0)

        def NUMBER(self):
            return self.getToken(sasmParser.NUMBER, 0)

        def getRuleIndex(self):
            return sasmParser.RULE_opcode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcode" ):
                listener.enterOpcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcode" ):
                listener.exitOpcode(self)




    def opcode(self):

        localctx = sasmParser.OpcodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_opcode)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                localctx.jump = self.match(sasmParser.JUMPS)
                self.state = 76
                localctx.adr = self.match(sasmParser.ADR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                localctx.comm = self.match(sasmParser.OPCODEZERO)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                localctx.pop = self.match(sasmParser.POP)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                localctx.pop = self.match(sasmParser.POP)
                self.state = 80
                localctx.adr = self.match(sasmParser.ADR)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                localctx.push = self.match(sasmParser.PUSH)
                self.state = 82
                localctx.adr = self.match(sasmParser.ADR)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                localctx.push = self.match(sasmParser.PUSH)
                self.state = 84
                localctx.absol = self.match(sasmParser.NUMBER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





